refactor: remove unused things