@@ -200,7 +200,7 @@ public final class Tools {
 
         List<String> javaArgList = new ArrayList<>();
 
-        getCacioJavaArgs(javaArgList, runtime.javaVersion == 8);
+        getCacioJavaArgs(javaArgList);
 
         if (versionInfo.logging != null) {
             String configFile = Tools.DIR_DATA + "/security/" + versionInfo.logging.client.file.id.replace("client", "log4j-rce-patch");
@@ -283,44 +283,19 @@ public final class Tools {
         }
     }
 
-    public static void getCacioJavaArgs(List<String> javaArgList, boolean isJava8) {
+    public static void getCacioJavaArgs(List<String> javaArgList) {
         // Caciocavallo config AWT-enabled version
         javaArgList.add("-Djava.awt.headless=false");
         javaArgList.add("-Dcacio.managed.screensize=" + AWTCanvasView.AWT_CANVAS_WIDTH + "x" + AWTCanvasView.AWT_CANVAS_HEIGHT);
         javaArgList.add("-Dcacio.font.fontmanager=sun.awt.X11FontManager");
         javaArgList.add("-Dcacio.font.fontscaler=sun.font.FreetypeFontScaler");
         javaArgList.add("-Dswing.defaultlaf=javax.swing.plaf.metal.MetalLookAndFeel");
-        if (isJava8) {
-            javaArgList.add("-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit");
-            javaArgList.add("-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment");
-        } else {
-            javaArgList.add("-Dawt.toolkit=com.github.caciocavallosilano.cacio.ctc.CTCToolkit");
-            javaArgList.add("-Djava.awt.graphicsenv=com.github.caciocavallosilano.cacio.ctc.CTCGraphicsEnvironment");
-            javaArgList.add("-Djava.system.class.loader=com.github.caciocavallosilano.cacio.ctc.CTCPreloadClassLoader");
-
-            javaArgList.add("--add-exports=java.desktop/java.awt=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.desktop/sun.java2d=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.desktop/sun.awt=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.desktop/sun.awt.event=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.desktop/sun.font=ALL-UNNAMED");
-            javaArgList.add("--add-exports=java.base/sun.security.action=ALL-UNNAMED");
-            javaArgList.add("--add-opens=java.base/java.util=ALL-UNNAMED");
-            javaArgList.add("--add-opens=java.desktop/java.awt=ALL-UNNAMED");
-            javaArgList.add("--add-opens=java.desktop/sun.font=ALL-UNNAMED");
-            javaArgList.add("--add-opens=java.desktop/sun.java2d=ALL-UNNAMED");
-            javaArgList.add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED");
-
-            // Opens the java.net package to Arc DNS injector on Java 9+
-            javaArgList.add("--add-opens=java.base/java.net=ALL-UNNAMED");
-        }
+        javaArgList.add("-Dawt.toolkit=net.java.openjdk.cacio.ctc.CTCToolkit");
+        javaArgList.add("-Djava.awt.graphicsenv=net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment");
 
         StringBuilder cacioClasspath = new StringBuilder();
-        cacioClasspath.append("-Xbootclasspath/").append(isJava8 ? "p" : "a");
-        File cacioDir = new File(DIR_GAME_HOME + "/caciocavallo" + (isJava8 ? "" : "17"));
+        cacioClasspath.append("-Xbootclasspath/p");
+        File cacioDir = new File(DIR_GAME_HOME + "/caciocavallo");
         File[] cacioFiles = cacioDir.listFiles();
         if (cacioFiles != null) {
             for (File file : cacioFiles) {
